# UnigineTestTask

./: .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  README.md  UnigineTestTask.sln
Submodules/: CMakeLists.txt
UnigineTestTask/: Input.txt  Main.cpp  Output.txt  UnigineTestTask.vcxproj  UnigineTestTask.vcxproj.filters
UnitTests/: CMakeLists.txt  UnitTests.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters
UnitTests/TestData/AllCases/: ExpectedResult.txt  Input.txt  Output.txt
UnitTests/TestData/BigTestFromUnigine/: Output.txt
UnitTests/TestData/EmptyFileTest/: ExpectedResult.txt  Output.txt
UnitTests/TestData/OneUrlTest/: ExpectedResult.txt  ExprectedResult.txt  Input.txt  Output.txt
UrlStatisticsCollector/: CMakeLists.txt  UrlStatisticsCollector.cpp
